--- a/browser/index.html
+++ b/browser/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title></title>
+    <title>My Side Project</title>
 
     <!-- any external CSS dependencies go here -->
     <!-- <link rel="stylesheet" href="" /> -->
