start seed file

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 
   <head>
-    <title>My Side Project</title>
+    <title>WanderLove</title>
 
     <!-- any external CSS dependencies go here -->
     <!-- <link rel="stylesheet" href="" /> -->
 
     <!-- any local CSS dependencies go here -->
-    <!-- <link rel="stylesheet" href="" /> -->
-
+    <link href="/style.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app"></div>
